--- a/Misc/Misc.vcxproj
+++ b/Misc/Misc.vcxproj
@@ -81,6 +81,7 @@
       <WarningLevel>Level4</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>C:\WindowsProgramming\DataStructures;C:\WindowsProgramming\Utility;C:\WindowsProgramming\Algorithms;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -115,6 +116,22 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Algorithms\Algorithms.vcxproj">
+      <Project>{7135f54c-3303-4a8e-8f6d-3a78c3d39678}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\DataStructures\DataStructures.vcxproj">
+      <Project>{991cb874-6f08-4b7a-9dad-0083f41e2aae}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\Utility\Utility.vcxproj">
+      <Project>{ac723027-77e9-434e-a183-ecfc90abeb89}</Project>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Misc.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="BSTRemoveNode.cpp" />
+    <ClCompile Include="BTreeInorder.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
