--- a/UnitTests/UnitTests.vcxproj
+++ b/UnitTests/UnitTests.vcxproj
@@ -117,6 +117,20 @@
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Algorithms\Algorithms.vcxproj">
+      <Project>{7135f54c-3303-4a8e-8f6d-3a78c3d39678}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\DataStructures\DataStructures.vcxproj">
+      <Project>{991cb874-6f08-4b7a-9dad-0083f41e2aae}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\Misc\Misc.vcxproj">
+      <Project>{19a0398e-daa8-49f1-b2bb-47ec383628de}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\Utility\Utility.vcxproj">
+      <Project>{ac723027-77e9-434e-a183-ecfc90abeb89}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
